--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     }
     .card a img:hover {
       transform: scale(1.03);
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.25);
     }
     .card-title {
       color: red;
       margin: 12px 0 8px;
-      font-size: 1.3em;
+      font-size: 9.9em;
       font-weight: 600;
     }
     .card-text {
-      font-size: 5em;
+      font-size: 8.9em;
       color: #222;
       text-align: left;
       line-height: 1.5;
@@ -57,7 +57,7 @@
 
   <div class="card">
     <a href="dog.html">
-      <img src="img.jpeg" alt="Visit Dog Shop">
+      <img src="img.jpeg" height="50" width="40"alt="Visit Dog Shop">
     </a>
     <div class="card-title"><b>Visit Our Dog Shop</b></div>
     <div class="card-text">
