--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     }
     .card {
       background: #ffffff;
-      padding: 30px;
+      padding: 50px;
       border-radius: 30px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       text-align: center;
-      max-width: 1400px;
+      max-width: 2000px;
       transition: 0.2s;
     }
     .card:hover {
@@ -42,11 +42,11 @@
     .card-title {
       color: red;
       margin: 12px 0 8px;
-      font-size: 9.9em;
+      font-size: 15cm;
       font-weight: 600;
     }
     .card-text {
-      font-size: 8.9em;
+      font-size: 12cm;
       color: #222;
       text-align: left;
       line-height: 1.5;
@@ -57,7 +57,7 @@
 
   <div class="card">
     <a href="dog.html">
-      <img src="img.jpeg" height="50" width="40"alt="Visit Dog Shop">
+      <img src="img.jpeg" height="50cm" width="40cm" alt="Visit Dog Shop">
     </a>
     <div class="card-title"><b>Visit Our Dog Shop</b></div>
     <div class="card-text">
