--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
     }
     .card a img {
-      height: 200px;
-      width: 200px;
+      height: 500px;
+      width: 500px;
       border-radius: 12px;
-      border: 2px solid #888;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-      transition: transform 0.2s, box-shadow 0.9s;
+      border: 5px solid #888;
+      box-shadow: 0 4px 50px rgba(0, 0, 0, 0.2);
+      transition: transform 0.2s, box-shadow 3.5s;
       cursor: pointer;
     }
     .card a img:hover {
@@ -57,7 +57,7 @@
 
   <div class="card">
     <a href="dog.html">
-      <img src="img.jpeg" height="50cm" width="40cm" alt="Visit Dog Shop">
+      <img src="img.jpeg" alt="Visit Dog Shop">
     </a>
     <div class="card-title"><b>Visit Our Dog Shop</b></div>
     <div class="card-text">
