--- a/dog.html
+++ b/dog.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <title>Dog Products</title>
 </head>
+  <style>
+    h1, h2 {
+      font-size: 1.8em;
+    }
+
+    li {
+      font-size: 1.3em;
+    }
+  </style>
 <body style= "background-color:#fff786;">
 
   <h1 style= "color:blue;"><b>Welcome to Our Dog Products</b></h1>
