--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     .card-title {
       color: red;
       margin: 12px 0 8px;
-      font-size: 1.3em;
+      font-size: 1.3cm;
       font-weight: 600;
     }
     .card-text {
-      font-size: 0.9em;
+      font-size: 0.9cm;
       color: #222;
       text-align: left;
       line-height: 1.5;
