--- a/dog.html
+++ b/dog.html
@@ -12,6 +12,9 @@
     li {
       font-size: 1.3em;
     }
+    p {
+      font-size: 1.3em;
+    }
   </style>
 <body style= "background-color:#fff786;">
 
